// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-desktop"
    >
      Expenses
    </div>
    <div
      className="show-for-mobile"
    >
      Expense
    </div>
    <div
      className="show-for-mobile"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        <p>
          No Expenses
        </p>
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-desktop"
    >
      Expenses
    </div>
    <div
      className="show-for-mobile"
    >
      Expense
    </div>
    <div
      className="show-for-mobile"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="123"
      key="123"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Gum"
      id="1234"
      key="1234"
      note=""
    />
    <ExpenseListItem
      amount={195}
      createdAt={345600000}
      description="Gum"
      id="4123"
      key="4123"
      note=""
    />
  </div>
</div>
`;
